--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <li><a href="#">Контакты</a></li>
             </ul>
             <ul class="user-nav">
-                <li class="login-link">Вход</li>
+                <li class="login-link"> <a href="#">Вход</a></li>
             </ul>
         </nav>
     </header>
@@ -68,8 +68,8 @@
             <figure class="gallery-content">
                 <a href="#"><img src="#" alt="Интерьер"></a>
             </figure>
-            <span class="gallery gallery-button gallery-button-back">Назад</span>
-            <span class="gallery gallery-button gallery-button-next">Вперед</span>
+            <button type="button" class="gallery gallery-button gallery-button-back">Назад</button>
+            <button type="button" class="gallery gallery-button gallery-button-next">Вперед</button>
         </section>
         <section class="contacts">
             <h2>Контактная информация</h2>
@@ -85,7 +85,25 @@
         <section class="appointment">
             <h2>Записаться</h2>
             <p class="appointment-info">УКАЖИТЕ ЖЕЛАЕМУЮ ДАТУ И ВРЕМЯ И МЫ СВЯЖЕМСЯ С ВАМИ ДЛЯ ПОДТВЕРЖДЕНИЯ БРОНИ</p>
-            <!-- Здесь будет форма-->
+            <form action="#" class="appointment-form" method="POST">
+                <p class="appointment-item">
+                    <label for="appointment-date">Дата</label>
+                    <input type="text" name="date" id="appointment-date" placeholder="30.01.2019">
+                </p>
+                <p class="appointment-item">
+                    <label for="appointment-time">Время</label>
+                    <input type="text" name="time" id="appointment-time" placeholder="10:00">
+                </p>
+                <p class="appointment-item">
+                    <label for="appointment-name">Ваше имя</label>
+                    <input type="text" name="name" id="appointment-name" placeholder="Борода">
+                </p>
+                <p class="appointment-item">
+                    <label for="appointment-phone">Телоефон</label>
+                    <input type="tel" name="phone" id="appointment-phone" placeholder="+37529 1234567">
+                </p>
+                <button class="button" type="submit">Отправить</button>
+            </form>
         </section>
     </main>
     <footer class="main-footer">
@@ -107,7 +125,17 @@
     <section class="modal modal-login">
         <h2>Личный кабинет</h2>
         <p>Введите пожалуйста свой логин и пароль</p>
-        <!--Здесь будет форма-->
+        <form action="#" class="login-form" method="post">
+            <p>
+                <input type="text" name="login" placeholder="Логин">
+            </p>
+            <p>
+                <input type="password" name="password" placeholder="Пароль">
+            </p>
+            <input type="checkbox" name="remember" class="visually-hidden">
+            <a href="#" class="restore">Я забыл пароль!</a>
+            <button class="button" type="submit">Войти</button>
+        </form>
         <span class="modal-close">x</span>
     </section>
     <section class="modal-map">
