--- a/index.html
+++ b/index.html
@@ -143,10 +143,10 @@
             </p>
             <button class="button" type="submit">Войти</button>
         </form>
-        <span class="modal-close">x</span>
+        <button class="modal-close" type="button">Закрыть</button>
     </section>
     <section class="modal-map">
-        <span class="modal-close">x</span>
+        <button class="modal-close" type="button">Закрыть</button>
     </section>
 </body>
 
