Добавлено окно логина на все страница

--- a/index.html
+++ b/index.html
@@ -146,6 +146,9 @@
         <button class="modal-close" type="button">Закрыть</button>
     </section>
     <section class="modal-map">
+        <p>
+            <img src="#" alt="Адрес расположения барбершоп">
+        </p>
         <button class="modal-close" type="button">Закрыть</button>
     </section>
 </body>
