--- a/catalog.html
+++ b/catalog.html
@@ -34,7 +34,64 @@
             <li class="breabcrumbs-current"><a href="#">Средства для ухода</a></li>
         </ul>
         <section class="filters">
-            <!--Здесь будет форма-->
+            <form action="#" class="filter" method="GET">
+                <fieldset>
+                    <legend>Производители:</legend>
+                    <ul>
+                        <li class="filter-option">
+                            <input type="checkbox" class="visually-hidden filter-input filter-input-checkbox" name="Baxter-of-california"
+                                id="filter-baxter-of-california" checked>
+                            <label for="filter-baxter-of-california">Baxter of California</label>
+                        </li>
+                        <li class="filter-option">
+                            <input type="checkbox" class="visually-hidden filter-input filter-input-checkbox" name="mr-natty"
+                                id="filter-mr-natty">
+                            <label for="filter-mr-natty">Mr Natty</label>
+                        </li>
+                        <li class="filter-option">
+                            <input type="checkbox" class="visually-hidden filter-input filter-input-checkbox" name="Suavecito"
+                                id="filter-suavecito" checked>
+                            <label for="filter-suavecito">Suavecito</label>
+                        </li>
+                        <li class="filter-option">
+                            <input type="checkbox" class="visually-hidden filter-input filter-input-checkbox" name="malin-goetz"
+                                id="filter-malin-goetz">
+                            <label for="filter-malin-goetz">malin+goetz</label>
+                        </li>
+                        <li class="filter-option">
+                            <input type="checkbox" class="visually-hidden filter-input filter-input-checkbox" name="murrays"
+                                id="filter-murrays">
+                            <label for="filter-murrays">Murrays</label>
+                        </li>
+                        <li class="filter-option">
+                            <input type="checkbox" class="visually-hidden filter-input filter-input-checkbox" name="American-crew"
+                                id="filter-american-crew" checked>
+                            <label for="filter-american-crew">American Crew</label>
+                        </li>
+                    </ul>
+                </fieldset>
+                <fieldset>
+                    <Legend>Группы товаров:</Legend>
+                    <ul>
+                        <li class="filter-option">
+                            <input type="radio" class="visually-hidden filter-input filter-input-radio" name="product-group"
+                                value="shaving" id="filter-shaving">
+                            <label for="filter-shaving">бритвенные принадлежности</label>
+                        </li>
+                        <li class="filter-option">
+                            <input type="radio" class="visually-hidden filter-input filter-input-radio" name="product-group"
+                                value="hair-care" id="filter-hair-care">
+                            <label for="filter-hair-care">средства для ухода</label>
+                        </li>
+                        <li class="filter-option">
+                            <input type="radio" class="visually-hidden filter-input filter-input-radio" name="product-group"
+                                value="accessories" id="filter-accessories">
+                            <label for="filter-accessories">аксессуары</label>
+                        </li>
+                    </ul>
+                </fieldset>
+                <button type="submit" class="filter-button button">Показать</button>
+            </form>
         </section>
         <section class="catalog">
             <ul class="cstslog-list">
