Добавил картинку логотипа

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <nav class="main-nav">
 
             <a href="#" class="main-geader-logo">
-                <img src="#" alt="Логотип Барбершопа">
+                <img src="img/index-logo.svg" width="371px" height="155px" alt="Логотип Барбершопа">
             </a>
 
             <ul class="site-nav">
