Добавил фото интерьера

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <section class="gallery">
             <h2>Фотогалерея</h2>
             <figure class="gallery-content">
-                <a href="#"><img src="#" alt="Интерьер"></a>
+                <a href="#"><img src="img/Layer_21.png" width="328px" height="164px" alt="Интерьер"></a>
             </figure>
             <button type="button" class="gallery gallery-button gallery-button-back">Назад</button>
             <button type="button" class="gallery gallery-button gallery-button-next">Вперед</button>
