добавл класс button для кнопок

--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
             <figure class="gallery-content">
                 <a href="#"><img src="img/Layer_21.png" width="328px" height="164px" alt="Интерьер"></a>
             </figure>
-            <button type="button" class="gallery gallery-button gallery-button-back">Назад</button>
-            <button type="button" class="gallery gallery-button gallery-button-next">Вперед</button>
+            <button type="button" class="button gallery-button gallery-button-back">Назад</button>
+            <button type="button" class="button gallery-button gallery-button-next">Вперед</button>
         </section>
         </div>
         <section class="contacts">
