--- a/index.html
+++ b/index.html
@@ -78,40 +78,42 @@
             <button type="button" class="button gallery-button gallery-button-next">Вперед</button>
         </section>
         </div>
-        <section class="contacts">
-            <h2>Контактная информация</h2>
-            <p>БАРБЕРШОП «БОРОДИНСКИЙ»<br>
-                АДРЕС: Г. САНКТ-ПЕТЕРБУРГ, Б. КОНЮШЕННАЯ, Д. 19/8 <br>
-                ТЕЛЕФОН: +7 (495) 666-02-66</p>
-            <p>ВРЕМЯ РАБОТЫ: <br>
-                ПН—ПТ: С 10:00 ДО 22:00 <br>
-                СБ—ВС: С 10:00 ДО 19:00</p>
-            <a href="#" class="button">Как проехать</a>
-            <a href="#" class="button">Обратная связь</a>
-        </section>
-        <section class="appointment">
-            <h2>Записаться</h2>
-            <p class="appointment-info">УКАЖИТЕ ЖЕЛАЕМУЮ ДАТУ И ВРЕМЯ И МЫ СВЯЖЕМСЯ С ВАМИ ДЛЯ ПОДТВЕРЖДЕНИЯ БРОНИ</p>
-            <form action="#" class="appointment-form" method="POST">
-                <p class="appointment-item">
-                    <label for="appointment-date">Дата</label>
-                    <input type="text" name="date" id="appointment-date" placeholder="30.01.2019">
-                </p>
-                <p class="appointment-item">
-                    <label for="appointment-time">Время</label>
-                    <input type="text" name="time" id="appointment-time" placeholder="10:00">
-                </p>
-                <p class="appointment-item">
-                    <label for="appointment-name">Ваше имя</label>
-                    <input type="text" name="name" id="appointment-name" placeholder="Борода">
-                </p>
-                <p class="appointment-item">
-                    <label for="appointment-phone">Телоефон</label>
-                    <input type="tel" name="phone" id="appointment-phone" placeholder="+37529 1234567">
-                </p>
-                <button class="button" type="submit">Отправить</button>
-            </form>
-        </section>
+        <div class="index-columns">
+            <section class="contacts">
+                <h2>Контактная информация</h2>
+                <p>БАРБЕРШОП «БОРОДИНСКИЙ»<br>
+                    АДРЕС: Г. САНКТ-ПЕТЕРБУРГ, Б. КОНЮШЕННАЯ, Д. 19/8 <br>
+                    ТЕЛЕФОН: +7 (495) 666-02-66</p>
+                <p>ВРЕМЯ РАБОТЫ: <br>
+                    ПН—ПТ: С 10:00 ДО 22:00 <br>
+                    СБ—ВС: С 10:00 ДО 19:00</p>
+                <a href="#" class="button">Как проехать</a>
+                <a href="#" class="button">Обратная связь</a>
+            </section>
+            <section class="appointment">
+                <h2>Записаться</h2>
+                <p class="appointment-info">УКАЖИТЕ ЖЕЛАЕМУЮ ДАТУ И ВРЕМЯ И МЫ СВЯЖЕМСЯ С ВАМИ ДЛЯ ПОДТВЕРЖДЕНИЯ БРОНИ</p>
+                <form action="#" class="appointment-form" method="POST">
+                    <p class="appointment-item">
+                        <label for="appointment-date">Дата</label>
+                        <input type="text" name="date" id="appointment-date" placeholder="30.01.2019">
+                    </p>
+                    <p class="appointment-item">
+                        <label for="appointment-time">Время</label>
+                        <input type="text" name="time" id="appointment-time" placeholder="10:00">
+                    </p>
+                    <p class="appointment-item">
+                        <label for="appointment-name">Ваше имя</label>
+                        <input type="text" name="name" id="appointment-name" placeholder="Борода">
+                    </p>
+                    <p class="appointment-item">
+                        <label for="appointment-phone">Телоефон</label>
+                        <input type="tel" name="phone" id="appointment-phone" placeholder="+37529 1234567">
+                    </p>
+                    <button class="button" type="submit">Отправить</button>
+                </form>
+            </section>
+        </div>
     </main>
     <footer class="main-footer">
         <p>БАРБЕРШОП «БОРОДИНСКИЙ» <br>
