--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     <footer class="main-footer">
         <p>БАРБЕРШОП «БОРОДИНСКИЙ» <br>
             АДРЕС: Г. САНКТ-ПЕТЕРБУРГ, УЛ. Б. КОНЮШЕННАЯ, Д. 19/8 <br>
-            КАК НАС НАЙТИ? <br>
+           <a href="#"> КАК НАС НАЙТИ?</a> <br>
             ТЕЛЕФОН: +7 (495) 666-02-66</p>
         <div class="footer-social">
             <b>Давайте дружить!</b>
