--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         </div>
     </main>
     <footer class="main-footer">
-        <p>БАРБЕРШОП «БОРОДИНСКИЙ» <br>
+        <p class="footer-contacts">БАРБЕРШОП «БОРОДИНСКИЙ» <br>
             АДРЕС: Г. САНКТ-ПЕТЕРБУРГ, УЛ. Б. КОНЮШЕННАЯ, Д. 19/8 <br>
            <a href="#"> КАК НАС НАЙТИ?</a> <br>
             ТЕЛЕФОН: +7 (495) 666-02-66</p>
