добавил класс для чекбокс

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             </p>
             <p class="login-password-info">
                 <label for="login-password-info">Запомните меня</label>
-                <input type="checkbox" name="remember" class="visually-hidden" id="login-password-info">
+                <input type="checkbox" name="remember" class="visually-hidden login-checkbox" id="login-password-info">
                 <a href="#" class="restore">Я забыл пароль!</a>
             </p>
             <button class="button" type="submit">Войти</button>
