удалил класс у чекбокс, добавил класс к label

--- a/index.html
+++ b/index.html
@@ -146,8 +146,8 @@
                 <input type="password" name="password" placeholder="Пароль" id="user-password">
             </p>
             <p class="login-password-info">
-                <label for="login-password-info">Запомните меня</label>
-                <input type="checkbox" name="remember" class="visually-hidden login-checkbox" id="login-password-info">
+                <label for="login-password-info" class="login-checkbox">Запомните меня</label>
+                <input type="checkbox" name="remember" class="visually-hidden" id="login-password-info">
                 <a href="#" class="restore">Я забыл пароль!</a>
             </p>
             <button class="button" type="submit">Войти</button>
