добавил класс для body

--- a/catalog.html
+++ b/catalog.html
@@ -5,7 +5,7 @@
     <title>Borodinski</title>
 </head>
 
-<body>
+<body class="inner-page">
     <header class="main-header">
 
         <nav class="main-nav">
