--- a/catalog.html
+++ b/catalog.html
@@ -3,6 +3,8 @@
 
 <head>
     <title>Borodinski</title>
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700&amp;subset=cyrillic" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body class="inner-page">
