--- a/catalog.html
+++ b/catalog.html
@@ -13,7 +13,7 @@
         <nav class="main-nav">
 
             <a href="#" class="main-header-logo">
-                <img src="#" alt="Логотип Барбершопа">
+                <img src="img/logo.png" width="111px" height="24" alt="Логотип Барбершопа">
             </a>
 
             <ul class="site-nav">
