добавил картинки товара

--- a/catalog.html
+++ b/catalog.html
@@ -104,7 +104,7 @@
                             <span class="catolog-item-title">"Baxter of California"</span>
                         </h3>
                         <p class="catalog-item-image">
-                            <img src="#" alt="Набор для путешествий Baxter of California">
+                            <img src="img/Layer_38.png" width="220px" height="165px" alt="Набор для путешествий Baxter of California">
                         </p>
                     </a>
                     <p class="catalog-item-price">
@@ -121,7 +121,7 @@
                             <span class="catolog-item-title">"Baxter of California"</span>
                         </h3>
                         <p class="catalog-item-image">
-                            <img src="#" alt="Увлвжняющий кондиционер Baxter of California">
+                            <img src="img/Layer_30.png" width="220px" height="165px" alt="Увлвжняющий кондиционер Baxter of California">
                         </p>
                     </a>
                     <p class="catalog-item-price">
@@ -138,7 +138,7 @@
                             <span class="catolog-item-title">"Suavecito"</span>
                         </h3>
                         <p class="catalog-item-image">
-                            <img src="#" alt="Гель для волос Suavecito">
+                            <img src="img/Layer_39.png" width="220px" height="165px" alt="Гель для волос Suavecito">
                         </p>
                     </a>
                     <p class="catalog-item-price">
@@ -155,7 +155,7 @@
                             <span class="catolog-item-title">"American Crew"</span>
                         </h3>
                         <p class="catalog-item-image">
-                            <img src="#" alt="Глина для волос American Crew">
+                            <img src="img/Layer_32.png" width="220px" height="165px" alt="Глина для волос American Crew">
                         </p>
                     </a>
                     <p class="catalog-item-price">
@@ -172,7 +172,7 @@
                             <span class="catolog-item-title">"American Crew"</span>
                         </h3>
                         <p class="catalog-item-image">
-                            <img src="#" alt="Гель для волос American Crew">
+                            <img src="img/Layer_33.png" width="220px" height="165px" alt="Гель для волос American Crew">
                         </p>
                     </a>
                     <p class="catalog-item-price">
@@ -189,7 +189,7 @@
                             <span class="catolog-item-title">"Baxter of California"</span>
                         </h3>
                         <p class="catalog-item-image">
-                            <img src="#" alt="Набор для бритья Baxter of California">
+                            <img src="img/Layer_42.png" width="220px" height="165px" alt="Набор для бритья Baxter of California">
                         </p>
                     </a>
                     <p class="catalog-item-price">
