--- a/catalog.html
+++ b/catalog.html
@@ -96,7 +96,7 @@
             </form>
         </section>
         <section class="catalog">
-            <ul class="cstslog-list">
+            <ul class="catalog-list">
                 <li class="catalog-item">
                     <a href="#">
                         <h3>
@@ -113,7 +113,7 @@
                     </p>
                 </li>
             </ul>
-            <ul class="cstslog-list">
+            <ul class="catalog-list">
                 <li class="catalog-item">
                     <a href="#">
                         <h3>
@@ -130,7 +130,7 @@
                     </p>
                 </li>
             </ul>
-            <ul class="cstslog-list">
+            <ul class="catalog-list">
                 <li class="catalog-item">
                     <a href="#">
                         <h3>
@@ -147,7 +147,7 @@
                     </p>
                 </li>
             </ul>
-            <ul class="cstslog-list">
+            <ul class="catalog-list">
                 <li class="catalog-item">
                     <a href="#">
                         <h3>
@@ -164,7 +164,7 @@
                     </p>
                 </li>
             </ul>
-            <ul class="cstslog-list">
+            <ul class="catalog-list">
                 <li class="catalog-item">
                     <a href="#">
                         <h3>
@@ -181,7 +181,7 @@
                     </p>
                 </li>
             </ul>
-            <ul class="cstslog-list">
+            <ul class="catalog-list">
                 <li class="catalog-item">
                     <a href="#">
                         <h3>
