исправил ошибку в классе

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
         <nav class="main-nav">
 
-            <a href="#" class="main-geader-logo">
+            <a href="#" class="main-header-logo">
                 <img src="img/index-logo.svg" width="371px" height="155px" alt="Логотип Барбершопа">
             </a>
 
