добавил ссылку на главную страницу

--- a/catalog.html
+++ b/catalog.html
@@ -31,7 +31,7 @@
     <main class="container">
         <h1 class="page-title">Средства для ухода</h1>
         <ul class="breadcrumbs">
-            <li><a href="#">Главная</a></li>
+            <li><a href="index.html">Главная</a></li>
             <li><a href="#">Магазин</a></li>
             <li class="breabcrumbs-current"><a href="#">Средства для ухода</a></li>
         </ul>
