добавил ссылку на главную страницу

--- a/catalog.html
+++ b/catalog.html
@@ -11,7 +11,7 @@
     <header class="main-header">
 
         <nav class="main-nav container">
-            <a href="#" class="main-header-logo header-logo-catalog">
+            <a href="index.html" class="main-header-logo header-logo-catalog">
                 <img src="img/logo.png" width="111px" height="24" alt="Логотип Барбершопа">
             </a>
 
