--- a/catalog.html
+++ b/catalog.html
@@ -14,9 +14,7 @@
             <a href="index.html" class="main-header-logo header-logo-catalog">
                 <img src="img/logo.png" width="111px" height="24" alt="Логотип Барбершопа">
             </a>
-
             <ul class="site-nav">
-
                 <li><a href="#">Информация</a></li>
                 <li><a href="#">Новсти</a></li>
                 <li><a href="#">Прайс-лист</a></li>
@@ -35,7 +33,7 @@
         <ul class="breadcrumbs">
             <li><a href="index.html">Главная</a></li>
             <li><a href="#">Магазин</a></li>
-            <li class="breabcrumbs-current"><a href="#">Средства для ухода</a></li>
+            <li class="breabcrumbs-current"><span>Средства для ухода</span></li>
         </ul>
         <div class="catalog-colums">
             <section class="filters">
