--- a/product card.html
+++ b/product card.html
@@ -3,15 +3,17 @@
 
 <head>
     <title>Borodinski</title>
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700&amp;subset=cyrillic" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body>
+<body class="inner-page">
     <header class="main-header">
 
-        <nav class="main-nav">
+        <nav class="main-nav container">
 
             <a href="#" class="main-geader-logo">
-                <img src="#" alt="Логотип Барбершопа">
+                <img src="img/logo.png" alt="Логотип Барбершопа">
             </a>
 
             <ul class="site-nav">
@@ -30,10 +32,10 @@
     <main class="container">
         <h1 class="page-title">Набор для путешествий «Baxter of California»</h1>
         <ul class="breadcrumbs">
-            <li><a href="#">Главная</a></li>
-            <li><a href="#">Магазин</a></li>
+            <li><a href="index.html">Главная</a></li>
+            <li><a href="catalog.html">Магазин</a></li>
             <li><a href="#">Средства для ухода</a></li>
-            <li class="breabcrumbs-current"><a href="#">Набор для путешествий «Baxter of California»</a></li>
+            <li class="breabcrumbs-current"><span>Набор для путешествий «Baxter of California»</span></li>
         </ul>
         <section class="product-photos">
             <p class="main-photo"><img src="#" alt="Фото всего набора"></p>
