--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
                         <li><a href="#">Контакты</a></li>
                     </ul>
                     <ul class="user-nav">
-                        <li class="login-link">
-                            <a href="#">Вход</a>
+                        <li>
+                            <a class="login-link" href="#">Вход</a>
                         </li>
                     </ul>
                 </div>
