--- a/index.html
+++ b/index.html
@@ -75,11 +75,13 @@
             </section>
             <section class="gallery">
                 <h2>Фотогалерея</h2>
-                <figure class="gallery-content">
-                    <a href="#"><img src="img/Layer_21.png" width="286px" height="164px" alt="Интерьер"></a>
-                </figure>
-                <button type="button" class="button gallery-button gallery-button-back">Назад</button>
-                <button type="button" class="button gallery-button gallery-button-next">Вперед</button>
+                <div class="gallery-container">
+                    <figure class="gallery-content">
+                        <a href="#"><img src="img/Layer_21.png" width="286px" height="164px" alt="Интерьер"></a>
+                    </figure>
+                    <button type="button" class="button gallery-button gallery-button-back" disabled>Назад</button>
+                    <button type="button" class="button gallery-button gallery-button-next">Вперед</button>
+                </div>
             </section>
         </div>
         <div class="index-columns">
