--- a/index.html
+++ b/index.html
@@ -130,10 +130,10 @@
                 ТЕЛЕФОН: +7 (495) 666-02-66</p>
             <div class="footer-social">
                 <b>Давайте дружить!</b>
-                <ul>
-                    <li><a href="#" class="social-button">Вконтакте</a></li>
-                    <li><a href="#" class="social-button">Фейсбук</a></li>
-                    <li><a href="#" class="social-button">Инстаграм</a></li>
+                <ul class="social-link">
+                    <li><a href="#" class="social-button-vk"><span class="visually-hidden">Вконтакте</span></a></li>
+                    <li><a href="#" class="social-button-fb"><span class="visually-hidden">Фейсбук</span></a></li>
+                    <li><a href="#" class="social-button-inst"><span class="visually-hidden">Инстаграм</span></a></li>
                 </ul>
             </div>
             <p class="footer-copyright">
