--- a/product card.html
+++ b/product card.html
@@ -12,7 +12,7 @@
 
         <nav class="main-nav container">
 
-            <a href="#" class="main-geader-logo">
+            <a href="#" class="main-header-logo">
                 <img src="img/logo.png" alt="Логотип Барбершопа">
             </a>
 
@@ -24,7 +24,9 @@
                 <li><a href="#">Контакты</a></li>
             </ul>
             <ul class="user-nav">
-                <li class="login-link">Вход</li>
+                <li>
+                    <a class="login-link" href="#">Вход</a>
+                </li>
             </ul>
         </nav>
     </header>
