--- a/product card.html
+++ b/product card.html
@@ -12,7 +12,7 @@
 
         <nav class="main-nav container">
 
-            <a href="#" class="main-header-logo">
+            <a href="index.html" class="main-header-logo">
                 <img src="img/logo.png" alt="Логотип Барбершопа">
             </a>
 
@@ -40,11 +40,11 @@
             <li class="breabcrumbs-current"><span>Набор для путешествий «Baxter of California»</span></li>
         </ul>
         <section class="product-photos">
-            <p class="main-photo"><img src="#" alt="Фото всего набора"></p>
+            <p class="main-photo"><img src="img/barbershop-item/main-foto.png" alt="Фото всего набора"></p>
             <ul class="product-images">
-                <li><img src="#" alt="Фото в анфас"></li>
-                <li><img src="#" alt="Фото в профиль"></li>
-                <li><img src="#" alt="Фото отдельной части"></li>
+                <li><img src="img/barbershop-item/foto-1.png" alt="Фото в анфас"></li>
+                <li><img src="img/barbershop-item/foto-2.png" alt="Фото в профиль"></li>
+                <li><img src="img/barbershop-item/foto-3.png" alt="Фото отдельной части"></li>
             </ul>
         </section>
         <section class="description">
