--- a/product card.html
+++ b/product card.html
@@ -39,51 +39,59 @@
             <li><a href="#">Средства для ухода</a></li>
             <li class="breabcrumbs-current"><span>Набор для путешествий «Baxter of California»</span></li>
         </ul>
-        <section class="product-photos">
-            <p class="main-photo"><img src="img/barbershop-item/main-foto.png" alt="Фото всего набора"></p>
-            <ul class="product-images">
-                <li><img src="img/barbershop-item/foto-1.png" alt="Фото в анфас"></li>
-                <li><img src="img/barbershop-item/foto-2.png" alt="Фото в профиль"></li>
-                <li><img src="img/barbershop-item/foto-3.png" alt="Фото отдельной части"></li>
-            </ul>
-        </section>
-        <section class="description">
-            <p class="product-availability">Есть в наличии</p>
-            <p class="product-article">Артикул: dexter-ae</p>
-            <p class="product-text">Travel Kit – необходимый аксессуар во время любого путешествия.
-                В аккуратной кожаной сумке находится все, что нужно для бритья и ухода за кожей во время рабочей
-                поездки или отдыха:
-                средство для умывания, увлажняющий крем, крем для бритья, крем после бритья, шампунь.
-                Набор также может стать отличным подарком.</p>
-            <p class="catalog-item-price">
-                <b>2 900 ₽</b>
-                <a href="#" class="button">Купить</a>
-            </p>
-            <h2>В набор входят:</h2>
-            <ul>
-                <li>Средство для умывания (50 мл)</li>
-                <li>Увлажняющий крем (50 мл)</li>
-                <li>Крем для бритья (50 мл)</li>
-                <li>Крем после бритья, шампунь (50 мл)</li>
-                <li>Удобная кожаная косметичка</li>
-            </ul>
-        </section>
+        <div class="product-wrap">
+            <section class="product-photos">
+                <p class="main-photo"><img src="img/barbershop-item/main-test.png" alt="Фото всего набора"></p>
+                <ul class="product-images">
+                    <li><img src="img/barbershop-item/foto-1.png" alt="Фото в анфас"></li>
+                    <li><img src="img/barbershop-item/foto-2.png" alt="Фото в профиль"></li>
+                    <li><img src="img/barbershop-item/foto-3.png" alt="Фото отдельной части"></li>
+                </ul>
+            </section>
+            <section class="description">
+                <div class="text-wrap">
+                    <p class="product-availability">Есть в наличии</p>
+                    <p class="product-article">Артикул: dexter-ae</p>
+                </div>
+                <p class="product-text">Travel Kit – необходимый аксессуар во время любого путешествия.
+                    В аккуратной кожаной сумке находится все, что нужно для бритья и ухода за кожей во время рабочей
+                    поездки или отдыха:
+                    средство для умывания, увлажняющий крем, крем для бритья, крем после бритья, шампунь.
+                    Набор также может стать отличным подарком.</p>
+                <p class="catalog-item-price">
+                    <b>2 900 ₽</b>
+                    <a href="#" class="button">Купить</a>
+                </p>
+                <h2>В набор входят:</h2>
+                <ul>
+                    <li>Средство для умывания (50 мл)</li>
+                    <li>Увлажняющий крем (50 мл)</li>
+                    <li>Крем для бритья (50 мл)</li>
+                    <li>Крем после бритья, шампунь (50 мл)</li>
+                    <li>Удобная кожаная косметичка</li>
+                </ul>
+            </section>
+        </div>
     </main>
     <footer class="main-footer">
-        <p>БАРБЕРШОП «БОРОДИНСКИЙ» <br>
-            АДРЕС: Г. САНКТ-ПЕТЕРБУРГ, УЛ. Б. КОНЮШЕННАЯ, Д. 19/8 <br>
-            КАК НАС НАЙТИ? <br>
-            ТЕЛЕФОН: +7 (495) 666-02-66</p>
-        <div class="footer-social">
-            <b>Давайте дружить!</b>
-            <a href="#" class="social-button">Вконтакте</a>
-            <a href="#" class="social-button">Фейсбук</a>
-            <a href="#" class="social-button">Инстаграм</a>
+        <div class="container">
+            <p class="footer-contacts">БАРБЕРШОП «БОРОДИНСКИЙ» <br>
+                АДРЕС: Г. САНКТ-ПЕТЕРБУРГ, УЛ. Б. КОНЮШЕННАЯ, Д. 19/8 <br>
+                <a href="#"> КАК НАС НАЙТИ?</a> <br>
+                ТЕЛЕФОН: +7 (495) 666-02-66</p>
+            <div class="footer-social">
+                <b>Давайте дружить!</b>
+                <ul class="social-link">
+                    <li><a href="#" class="social-button-vk"><span class="visually-hidden">Вконтакте</span></a></li>
+                    <li><a href="#" class="social-button-fb"><span class="visually-hidden">Фейсбук</span></a></li>
+                    <li><a href="#" class="social-button-inst"><span class="visually-hidden">Инстаграм</span></a></li>
+                </ul>
+            </div>
+            <p class="footer-copyright">
+                <b>Разработано:</b>
+                <a href="#" class="button">HTML ACADEMY</a>
+            </p>
         </div>
-        <p class="footer-copyright">
-            <b>Разработано:</b>
-            <a href="#" class="button">HTML ACADEMY</a>
-        </p>
     </footer>
     <section class="modal modal-login">
         <h2>Личный кабинет</h2>
