--- a/catalog.html
+++ b/catalog.html
@@ -16,7 +16,7 @@
             </a>
             <ul class="site-nav">
                 <li><a href="#">Информация</a></li>
-                <li><a href="#">Новсти</a></li>
+                <li><a href="#">Новости</a></li>
                 <li><a href="#">Прайс-лист</a></li>
                 <li class="site-navigation-current"><a href="#">Магазин</a></li>
                 <li><a href="#">Контакты</a></li>
