--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <div class="container">
                     <ul class="site-nav">
                         <li><a href="#">Информация</a></li>
-                        <li><a href="#">Новсти</a></li>
+                        <li><a href="#">Новости</a></li>
                         <li><a href="#">Прайс-лист</a></li>
                         <li><a href="catalog.html">Магазин</a></li>
                         <li><a href="#">Контакты</a></li>
