--- a/index.html
+++ b/index.html
@@ -131,7 +131,8 @@
             <div class="footer-social">
                 <b>Давайте дружить!</b>
                 <ul class="social-link">
-                    <li><a href="#" class="social-button-vk"><span class="visually-hidden">Вконтакте</span></a></li>
+                    <li><a href="vk.com" class="social-button-vk"><span class="visually-hidden">Вконтакте</span></a>
+                    </li>
                     <li><a href="#" class="social-button-fb"><span class="visually-hidden">Фейсбук</span></a></li>
                     <li><a href="#" class="social-button-inst"><span class="visually-hidden">Инстаграм</span></a></li>
                 </ul>
@@ -148,15 +149,19 @@
         <form action="#" class="login-form" method="post">
             <p>
                 <label for="user-login" class="visually-hidden">Логин</label>
-                <input type="text" name="login" placeholder="Логин" id="user-login">
+                <input class="user-login-icon" type="text" name="login" placeholder="Логин" id="user-login">
             </p>
             <p>
                 <label for="user-password" class="visually-hidden">Пароль</label>
-                <input type="password" name="password" placeholder="Пароль" id="user-password">
+                <input class="user-password-icon" type="password" name="password" placeholder="Пароль"
+                    id="user-password">
             </p>
-            <p class="login-password-info">
-                <label for="login-password-info" class="login-checkbox">Запомните меня</label>
-                <input type="checkbox" name="remember" class="visually-hidden" id="login-password-info">
+            <p class="login-help">
+                <label class="login-checkbox">
+                    <input type="checkbox" name="remember" class="visually-hidden">
+                    <span class="checkbox-indicator"></span>
+                    Запомните меня
+                </label>
                 <a href="#" class="restore">Я забыл пароль!</a>
             </p>
             <button class="button" type="submit">Войти</button>
