--- a/catalog.html
+++ b/catalog.html
@@ -22,8 +22,8 @@
                 <li><a href="#">Контакты</a></li>
             </ul>
             <ul class="user-nav">
-                <li class="login-link">
-                    <a href="">Вход</a>
+                <li>
+                    <a class="login-link" href="">Вход</a>
                 </li>
             </ul>
         </nav>
@@ -99,7 +99,7 @@
             <section class="catalog">
                 <ul class="catalog-list">
                     <li class="catalog-item">
-                        <a href="#">
+                        <a href="product card.html">
                             <h3>
                                 <span class="catalog-category">Набор для путешествий</span>
                                 <span class="catolog-item-title">"Baxter of California"</span>
