--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
     </section>
     <section class="modal-map">
         <p>
-            <img src="#" alt="Адрес расположения барбершоп">
+            <img src="img/Без имени-1.png" width="766px" height="560px" alt="Адрес расположения барбершоп">
         </p>
         <button class="modal-close" type="button">Закрыть</button>
     </section>
