стили для catalog

--- a/catalog.html
+++ b/catalog.html
@@ -44,31 +44,37 @@
                             <li class="filter-option">
                                 <input type="checkbox" class="visually-hidden filter-input filter-input-checkbox"
                                     name="Baxter-of-california" id="filter-baxter-of-california" checked>
+                                <span class="checkbox-indicator"></span>
                                 <label for="filter-baxter-of-california">Baxter of California</label>
                             </li>
                             <li class="filter-option">
                                 <input type="checkbox" class="visually-hidden filter-input filter-input-checkbox"
                                     name="mr-natty" id="filter-mr-natty">
+                                <span class="checkbox-indicator"></span>
                                 <label for="filter-mr-natty">Mr Natty</label>
                             </li>
                             <li class="filter-option">
                                 <input type="checkbox" class="visually-hidden filter-input filter-input-checkbox"
                                     name="Suavecito" id="filter-suavecito" checked>
+                                <span class="checkbox-indicator"></span>
                                 <label for="filter-suavecito">Suavecito</label>
                             </li>
                             <li class="filter-option">
                                 <input type="checkbox" class="visually-hidden filter-input filter-input-checkbox"
                                     name="malin-goetz" id="filter-malin-goetz">
+                                <span class="checkbox-indicator"></span>
                                 <label for="filter-malin-goetz">malin+goetz</label>
                             </li>
                             <li class="filter-option">
                                 <input type="checkbox" class="visually-hidden filter-input filter-input-checkbox"
                                     name="murrays" id="filter-murrays">
+                                <span class="checkbox-indicator"></span>
                                 <label for="filter-murrays">Murrays</label>
                             </li>
                             <li class="filter-option">
                                 <input type="checkbox" class="visually-hidden filter-input filter-input-checkbox"
                                     name="American-crew" id="filter-american-crew" checked>
+                                <span class="checkbox-indicator"></span>
                                 <label for="filter-american-crew">American Crew</label>
                             </li>
                         </ul>
@@ -79,16 +85,19 @@
                             <li class="filter-option">
                                 <input type="radio" class="visually-hidden filter-input filter-input-radio"
                                     name="product-group" value="shaving" id="filter-shaving">
+                                <span class="radio-indicator"></span>
                                 <label for="filter-shaving">бритвенные принадлежности</label>
                             </li>
                             <li class="filter-option">
                                 <input type="radio" class="visually-hidden filter-input filter-input-radio"
                                     name="product-group" value="hair-care" id="filter-hair-care">
+                                <span class="radio-indicator"></span>
                                 <label for="filter-hair-care">средства для ухода</label>
                             </li>
                             <li class="filter-option">
                                 <input type="radio" class="visually-hidden filter-input filter-input-radio"
                                     name="product-group" value="accessories" id="filter-accessories">
+                                <span class="radio-indicator"></span>
                                 <label for="filter-accessories">аксессуары</label>
                             </li>
                         </ul>
@@ -102,7 +111,7 @@
                         <a href="product card.html">
                             <h3>
                                 <span class="catalog-category">Набор для путешествий</span>
-                                <span class="catolog-item-title">"Baxter of California"</span>
+                                <span class="catalog-item-title">"Baxter of California"</span>
                             </h3>
                             <p class="catalog-item-image">
                                 <img src="img/Layer_38.png" width="220px" height="165px"
@@ -118,7 +127,7 @@
                         <a href="#">
                             <h3>
                                 <span class="catalog-category">Увлвжняющий кондиционер</span>
-                                <span class="catolog-item-title">"Baxter of California"</span>
+                                <span class="catalog-item-title">"Baxter of California"</span>
                             </h3>
                             <p class="catalog-item-image">
                                 <img src="img/Layer_30.png" width="220px" height="165px"
@@ -134,7 +143,7 @@
                         <a href="#">
                             <h3>
                                 <span class="catalog-category">Гель для волос</span>
-                                <span class="catolog-item-title">"Suavecito"</span>
+                                <span class="catalog-item-title">"Suavecito"</span>
                             </h3>
                             <p class="catalog-item-image">
                                 <img src="img/Layer_39.png" width="220px" height="165px" alt="Гель для волос Suavecito">
@@ -149,7 +158,7 @@
                         <a href="#">
                             <h3>
                                 <span class="catalog-category">Глина для волос</span>
-                                <span class="catolog-item-title">"American Crew"</span>
+                                <span class="catalog-item-title">"American Crew"</span>
                             </h3>
                             <p class="catalog-item-image">
                                 <img src="img/Layer_32.png" width="220px" height="165px"
@@ -165,7 +174,7 @@
                         <a href="#">
                             <h3>
                                 <span class="catalog-category">Гель для волос</span>
-                                <span class="catolog-item-title">"American Crew"</span>
+                                <span class="catalog-item-title">"American Crew"</span>
                             </h3>
                             <p class="catalog-item-image">
                                 <img src="img/Layer_33.png" width="220px" height="165px"
@@ -181,7 +190,7 @@
                         <a href="#">
                             <h3>
                                 <span class="catalog-category">Набор для ,бритья</span>
-                                <span class="catolog-item-title">"Baxter of California"</span>
+                                <span class="catalog-item-title">"Baxter of California"</span>
                             </h3>
                             <p class="catalog-item-image">
                                 <img src="img/Layer_42.png" width="220px" height="165px"
