--- a/price.html
+++ b/price.html
@@ -21,7 +21,7 @@
                 <li><a href="#">Информация</a></li>
                 <li><a href="#">Новости</a></li>
                 <li class="site-navigation-current"><a href="#">Прайс-лист</a></li>
-                <li><a href="#">Магазин</a></li>
+                <li><a href="catalog.html">Магазин</a></li>
                 <li><a href="#">Контакты</a></li>
             </ul>
             <ul class="user-nav">
@@ -39,7 +39,7 @@
             <li class="breabcrumbs-current"><span>Прайс-лист</span></li>
         </ul>
         <p class="price-logo">Истинно мужская классика</p>
-        <div class="price-column">
+        <div class="price-wrap">
             <section class="price-advantage">
                 <h2 class="advantage-logo">Мы используем только лучшие средства:</h2>
                 <ul class="advantage-list">
@@ -54,24 +54,26 @@
                 <table class="price-table">
                     <tr class="price-row">
                         <td class="price-column">Стрижка</td>
-                        <td class="price-column">1500 ₽</td>
+                        <td class="price-column price-item">1500 ₽</td>
                     </tr>
                     <tr class="price-row">
                         <td class="price-column">Стрижка бороды</td>
-                        <td class="price-column">500 ₽</td>
+                        <td class="price-column price-item">500 ₽</td>
                     </tr>
                     <tr class="price-row">
                         <td class="price-column">Накпутка усов</td>
-                        <td class="price-column">350 ₽</td>
+                        <td class="price-column price-item">350 ₽</td>
                     </tr>
                 </table>
             </section>
         </div>
-        <section class="description">
-            <h2 class="description-logo">Несколько слов о нас:</h2>
-            <p>Наша парикмахерская занимается исключительно мужскими стрижками. Стрижка каждого клиента для нас - это
-                уникальная и продуманная до мелочей работа. Мы не работаем на количество, мы делаем качество.</p>
-            <p>Наша мастерская расположена в центре города, поэтому сделать стильную стрижку можно в любое время, даже в
+        <section class="description-shop">
+            <p class="first-paragraph">
+                <span class="description-shop-logo">Несколько слов о нас:</span>
+                Наша парикмахерская занимается исключительно мужскими стрижками. Стрижка каждого клиента для нас - это
+                уникальная и продуманная до мелочей работа. Мы не работаем на количество, мы делаем качество.
+            </p>
+            <p class="second-paragraph">Наша мастерская расположена в центре города, поэтому сделать стильную стрижку можно в любое время, даже в
                 обеденный перерыв. Здесь вы можете погрузиться в удобную для вас атмосферу, чувствовать себя комфортно и
                 свободно.</p>
         </section>
