--- a/catalog.html
+++ b/catalog.html
@@ -18,8 +18,8 @@
             <ul class="site-nav">
                 <li><a href="#">Информация</a></li>
                 <li><a href="#">Новости</a></li>
-                <li><a href="#">Прайс-лист</a></li>
-                <li class="site-navigation-current"><a href="#">Магазин</a></li>
+                <li><a href="price.html">Прайс-лист</a></li>
+                <li class="site-navigation-current"><a>Магазин</a></li>
                 <li><a href="#">Контакты</a></li>
             </ul>
             <ul class="user-nav">
@@ -217,14 +217,14 @@
         <div class="container">
             <p class="footer-contacts">БАРБЕРШОП «БОРОДИНСКИЙ» <br>
                 АДРЕС: Г. САНКТ-ПЕТЕРБУРГ, УЛ. Б. КОНЮШЕННАЯ, Д. 19/8 <br>
-                <a href="#">КАК НАС НАЙТИ?</a> <br>
+                <a href="#"> КАК НАС НАЙТИ?</a> <br>
                 ТЕЛЕФОН: +7 (495) 666-02-66</p>
             <div class="footer-social">
                 <b>Давайте дружить!</b>
-                <ul>
-                    <li><a href="#" class="social-button">Вконтакте</a></li>
-                    <li></li><a href="#" class="social-button">Фейсбук</a></li>
-                    <li></li><a href="#" class="social-button">Инстаграм</a></li>
+                <ul class="social-link">
+                    <li><a href="#" class="social-button-vk"><span class="visually-hidden">Вконтакте</span></a></li>
+                    <li><a href="#" class="social-button-fb"><span class="visually-hidden">Фейсбук</span></a></li>
+                    <li><a href="#" class="social-button-inst"><span class="visually-hidden">Инстаграм</span></a></li>
                 </ul>
             </div>
             <p class="footer-copyright">
