--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <ul class="site-nav">
                         <li><a href="#">Информация</a></li>
                         <li><a href="#">Новости</a></li>
-                        <li><a href="#">Прайс-лист</a></li>
+                        <li><a href="price.html">Прайс-лист</a></li>
                         <li><a href="catalog.html">Магазин</a></li>
                         <li><a href="#">Контакты</a></li>
                     </ul>
