--- a/product card.html
+++ b/product card.html
@@ -20,8 +20,8 @@
             <ul class="site-nav">
                 <li><a href="#">Информация</a></li>
                 <li><a href="#">Новости</a></li>
-                <li><a href="#">Прайс-лист</a></li>
-                <li class="site-navigation-current"><a href="#">Магазин</a></li>
+                <li><a href="price.html">Прайс-лист</a></li>
+                <li class="site-navigation-current"><a href="catalog.html">Магазин</a></li>
                 <li><a href="#">Контакты</a></li>
             </ul>
             <ul class="user-nav">
