--- a/index.html
+++ b/index.html
@@ -175,6 +175,7 @@
         </p>
         <button class="modal-close" type="button">Закрыть</button>
     </section>
+    <script src="JS/script.js"></script>
 </body>
 
 </html>
