--- a/price.html
+++ b/price.html
@@ -119,6 +119,7 @@
         </form>
         <button class="modal-close" type="button">Закрыть</button>
     </section>
+    <script src="JS/script.js"></script>
 </body>
 
 </html>
