--- a/catalog.html
+++ b/catalog.html
@@ -254,6 +254,7 @@
         </form>
         <button class="modal-close" type="button">Закрыть</button>
     </section>
+    <script src="JS/script.js"></script>
 </body>
 
 </html>
