--- a/product card.html
+++ b/product card.html
@@ -115,6 +115,7 @@
         </form>
         <button class="modal-close" type="button">Закрыть</button>
     </section>
+    <script src="JS/script.js"></script>
 </body>
 
 </html>
