--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 <p>ВРЕМЯ РАБОТЫ: <br>
                     ПН—ПТ: С 10:00 ДО 22:00 <br>
                     СБ—ВС: С 10:00 ДО 19:00</p>
-                <a href="#" class="button">Как проехать</a>
+                <a href="#" class="button js-map-button">Как проехать</a>
                 <a href="#" class="button">Обратная связь</a>
             </section>
             <section class="appointment">
@@ -173,7 +173,7 @@
         <p>
             <img src="img/Без имени-1.png" width="766px" height="560px" alt="Адрес расположения барбершоп">
         </p>
-        <button class="modal-close" type="button">Закрыть</button>
+        <button class="modal-close map-close" type="button">Закрыть</button>
     </section>
     <script src="JS/script.js"></script>
 </body>
